--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <a class="nav-link active" aria-disabled="true">Classifica</a>
         </li>
          </ul>
-      <ul class="navbar-nav"
+      <ul class="navbar-nav">
         <li class="nav-item">
-         <a class="nav-Link active" aria-currente="page" hrefe="#">Logins</a>
+         <a class="nav-link active" aria-currente="page" hrefe="#">Logins</a>
         </li>
       </ul>
     </div>
