--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Game
-          </a> <ul class="dropdown-menu">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+            Game
+          </a> 
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Visualizza</a></li>
             <li><a class="dropdown-item" href="#">Inserisci</a></li>
           </li>
         </ul>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page">Classifica</a>
+          <a class="nav-link active" aria-current="page" href="#">Classifica</a>
         </li>
          </ul>
       <ul class="navbar-nav">
