--- a/index.html
+++ b/index.html
@@ -9,36 +9,41 @@
   <h1>Hello, world!</h1>
    <body>
     <img src="img/IMG_1618.jpeg" class="img-fluid" alt="Header caccia al tesoro">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-            Game
-          </a> 
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Visualizza</a></li>
-            <li><a class="dropdown-item" href="#">Inserisci</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Classifica</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-       <li class="nav-item"> 
-        <a class="nav-link active" aria-current="page" href="#">Login</a> 
-      </li> 
-     </ul>   
-    </div>
-  </div>
-</nav>  
-    <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   </body>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary"> 
+<div class="container-fluid"> 
+<a class="navbar-brand" href="#">Navbar</a> 
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
+<span class="navbar-toggler-icon">
+</span> 
+</button> 
+<div class="collapse navbar-collapse" id="navbarSupportedContent"> 
+<ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
+<li class="nav-item"> 
+<li class="nav-item dropdown"> 
+<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Game 
+</a> <ul class="dropdown-menu"> 
+<li>
+<a class="dropdown-item" href="#">Visualizza
+</a>
+</li>
+<li>
+<a class="dropdown-item" href="#">Inserisci
+</a>
+</li> 
+</ul> 
+</li> 
+<li class="nav-item"> 
+<a class="nav-link active" aria-current="page" href="#">Classifica
+</a> 
+</li>
+</ul> 
+<ul class="navbar-nav"> 
+<li class="nav-item"> 
+<a class="nav-link active" aria-current="page" href="#">Login</a> 
+</li> 
+</ul> 
+</div> 
+</div> 
+</nav> 
+</body> 
 </html>
