--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </nav>
      <form>
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Username</label>
-    <input type="Username" class="form-control" id="exampleInputUsername1">
+    <label for="exampleInpuUsername" class="form-label">Username</label>
+    <input type="Username" class="form-control" id="exampleInputUsername">
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
