--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 </nav>
      <form>
   <div class="mb-3">
-    <label for="exampleInpuUsername" class="form-label">Username</label>
-    <input type="Username" class="form-control" id="exampleInputUsername">
+    <label for="exampleInpuUsername1" class="form-label">Username</label>
+    <input type="username" class="form-control" id="exampleInputUsername1">
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1">
   </div>
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button type="login" class="btn btn-primary">Login</button>
 </form>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </body>
