--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
   </div>
 </nav>
+<div class="container text-center">
      <form>
   <div class="mb-3">
     <label for="exampleInpuUsername1" class="form-label">Username</label>
@@ -49,6 +50,7 @@
   </div>
   <button type="login" class="btn btn-primary">Login</button>
 </form>
+</div>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </body>
 </html>
