--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   </div>
 </nav>
 <div class="container text-center">
+ <div class="row">
+   <div class="col">
+   </div>
+   <div class="col">
      <form>
   <div class="mb-3">
     <label for="exampleInpuUsername1" class="form-label">Username</label>
