--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
    <body>
-    <img src="img/IMG_1618.jpeg" class="img-fluid" alt="Header caccia al tesoro">
+    <img src="img/IMG_1618.jpeg" class="img-fluid w-100" alt="Header caccia al tesoro">
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -38,11 +38,11 @@
     </div>
   </div>
 </nav>
-<div class="container text-center">
- <div class="row">
-   <div class="col">
-   </div>
-   <div class="col">
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
      <form>
   <div class="mb-3">
     <label for="exampleInpuUsername1" class="form-label">Username</label>
