--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -20,14 +20,27 @@
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Classifica</a>
+          <a class="nav-link active" aria-current="page" href="#">Storia</a>
+        </li>
+      </ul>
+      <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Prenota</a>
+        </li>
+      </ul>
+      <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Parchi</a>
         </li>
       </ul>
       <ul class="navbar-nav">
        <li class="nav-item"> 
         <a class="nav-link active" aria-current="page" href="#">Login</a> 
       </li> 
-     </ul>   
+     </ul> 
+      <ul class="navbar-nav">
+       <li class="nav-item"> 
+        <a class="nav-link active" aria-current="page" href="#">Iscriviti</a> 
+      </li> 
+     </ul>
     </div>
   </div>
 </nav>
