--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -33,12 +33,10 @@
       </ul>
       <ul class="navbar-nav">
        <li class="nav-item"> 
-        <a class="nav-link active" aria-current="page" href="#">Login</a> 
-      </li> 
-     </ul> 
-      <ul class="navbar-nav">
-       <li class="nav-item"> 
-        <a class="nav-link active" aria-current="page" href="#">Iscriviti</a> 
+        <a class="nav-link active" aria-disabled="true">Login</a>
+       </li>
+      <li>
+        <a class="nav-link active" aria-disabled="true">Iscriviti</a> 
       </li> 
      </ul>
     </div>
