--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -33,12 +33,12 @@
       </ul>
       <ul class="navbar-nav">
        <li class="nav-item"> 
-        <a class="nav-link active" aria-current="page" href="#">Login</a> 
+        <a class="nav-link active" aria-disebled="True">Login</a> 
       </li> 
      </ul> 
       <ul class="navbar-nav">
        <li class="nav-item"> 
-        <a class="nav-link active" aria-current="page" href="#">Iscriviti</a> 
+        <a class="nav-link active" aria-disebled="True">Iscriviti</a> 
       </li> 
      </ul>
     </div>
