--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -48,14 +48,14 @@
     </div>
      <form>
   <div class="mb-3">
-    <label for="exampleInpuUsername1" class="form-label">Username</label>
-    <input type="username" class="form-control" id="exampleInputUsername1">
+    <label for="exampleInpuNazione" class="form-label">Nazione</label>
+    <input type="Nazione" class="form-control" id="exampleInputNazione">
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <label for="exampleInputScuola" class="form-label">Scuola</label>
+    <input type="Scuola" class="form-control" id="exampleInputScuola">
   </div>
-  <button type="login" class="btn btn-primary">Login</button>
+  <button type="Invia" class="btn btn-primary">Invia</button>
 </form>
 </div>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
