--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -49,10 +49,11 @@
      <form>
   <div class="mb-3">
     <label for="exampleInpuNazione" class="form-label">Nazione</label>
-    <input type="Nazione" class="form-control" id="exampleInputNazione">
+    <input type="Nazione" class="form-control" id="exampleInputNazione" aria-describedby="NationHelp">
+    <div id="NationHelp" class="from-text" align="left">Inserisci il nome completo.</div>
   </div>
   <div class="mb-3">
-    <label for="exampleInputScuola" class="form-label">Scuola</label>
+    <label for="exampleInputScuola" align="left" class="form-label">Scuola</label>
     <input type="Scuola" class="form-control" id="exampleInputScuola">
   </div>
   <button type="Invia" class="btn btn-primary">Invia</button>
