--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -46,6 +46,8 @@
   <div class="row">
     <div class="col">
     </div>
+    <div class="col-6">
+    </div>
      <form>
   <div class="mb-3">
     <label for="exampleInpuNazione" class="form-label">Nazione</label>
