--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -46,15 +46,15 @@
   <div class="row">
     <div class="col">
     </div>
-    <div class="col-2">
+    <div class="col-6">
     </div>
      <form>
-  <div class="mb-2">
+  <div class="me-auto mb-2 mb-lg-0">
     <label for="exampleInpuNazione" class="form-label">Nazione</label>
     <input type="Nazione" class="form-control" id="exampleInputNazione" aria-describedby="NationHelp">
     <div id="NationHelp" class="from-text" align="left">Inserisci il nome completo.</div>
   </div>
-  <div class="mb-2">
+  <div class="me auto mb-2 mb-lg-0">
     <label for="exampleInputScuola" align="left" class="form-label">Scuola</label>
     <input type="Scuola" class="form-control" id="exampleInputScuola">
   </div>
