--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 </nav>
-    <div class="container text-center">
+    <div class="container">
   <div class="row">
     <div class="col">
     </div>
@@ -61,11 +61,6 @@
   <button type="Invia" class="btn btn-primary">Invia</button>
 </form>
 </div>
- <div class="col">
- </div>
-  <div class"col">
-  </div>
-    </div>
   <br>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </body>
