--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -64,6 +64,9 @@
 </form>
 </div>
   <br>
+<div class="alert alert-secondary" role="alert">
+  Io devo essere visibile per chi ha il cognome dalla A alla D
+</div>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </body>
 </html>
