--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -69,6 +69,15 @@
 <div class="alert alert-info" role="alert">
   Io devo essere visibile per chi ha il cognome dalla A alla D
 </div>
+<br>
+  <div class="container text-center">
+  <div class="row row-cols-4">
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+    <div class="col">Column</div>
+  </div>
+</div>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </body>
 </html>
