--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -72,10 +72,10 @@
 <br>
   <div class="container text-center">
   <div class="row row-cols-4">
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
-    <div class="col">Column</div>
+    <div class="col"><img src="img/IMG_1624.jpeg"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"><img src="img/IMG_1624.jpeg"></div>
   </div>
 </div>
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
