--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -74,7 +74,7 @@
   <div class="row row-cols-4">
   <div class="col"><img src="img/IMG_1624.jpeg">
     <div class="container text-center"></div>
-  <div class="row align-items-center">
+  <div class="row">
     <div class="col">
       Io devo essere visibile per chi ha il cognome dalla A alla D
     </div>
@@ -84,7 +84,7 @@
     <div class="col"></div>
     <div class="col"><img src="img/IMG_1624.jpeg">
     <div class="container text-center"></div>
-  <div class="row align-items-center">
+  <div class="row">
     <div class="col">
       Io devo essere visibile per chi ha il cognome dalla A alla Z
     </div>
