--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -78,6 +78,7 @@
     <div class="col">
       Io devo essere visibile per chi ha il cognome dalla A alla D
     </div>
+    <button type="!Click me" class="btn btn-primary">!Click me</button>
     </div>
   </div>
     <div class="col"></div>
@@ -88,6 +89,7 @@
     <div class="col">
       Io devo essere visibile per chi ha il cognome dalla A alla Z
     </div>
+    <button type="!Click me" class="btn btn-primary">!Click me</button>
     </div>
   </div>
     </div>
