--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -28,12 +28,11 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Inserisci</a></li>
             <li><a class="dropdown-item" href="#">Visualizza</a></li>
-            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Modifica</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Statistiche</a>
+          <a class="nav-link active" aria-current="true">Statistiche</a>
         </li>
       </ul>
 
