--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -36,7 +36,11 @@
         </li>
       </ul>
 
-      </form>
+       <ul class="navbar-nav">
+       <li class="nav-item"> 
+        <a class="nav-link active" aria-current="page" href="#">Logout</a> 
+      </li> 
+     </ul>   
     </div>
   </div>
 </nav>
