--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -44,6 +44,24 @@
     </div>
   </div>
 </nav>
+<br>
+    <form>
+  <div class="mb-3">
+    <label for="exampleInputCognome" class="form-label">Io devo essere visibile per chi ha il cognome dalla A alla G</label>
+    <input type="Cognome" class="form-control" id="exampleInputCognome">
+  </div>
+    <br>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Nome</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
