--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -50,14 +50,18 @@
     <label for="exampleInputCognome" class="form-label">Io devo essere visibile per chi ha il cognome dalla A alla G</label>
     <input type="Cognome" class="form-control" id="exampleInputCognome">
   </div>
-    <br>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Nome</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <label for="exampleInputNome" class="form-label">Nome</label>
+    <input type="Nome" class="form-control" id="exampleInputNome">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputCognome1" class="form-label">Cognome</label>
+    <input type="Cognome" class="form-control" id="exampleInputCognome1" aria-describedby="Cognome1Help">
+    <div id="Cognome1Help" class="form-text">Per le donne: inserire il cognome da nubile</div>
   </div>
   <div class="mb-3 form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <label class="form-check-label" for="exampleCheck1">Invia</label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
