--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -59,11 +59,7 @@
     <input type="Cognome" class="form-control" id="exampleInputCognome1" aria-describedby="Cognome1Help">
     <div id="Cognome1Help" class="form-text">Per le donne: inserire il cognome da nubile</div>
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Invia</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Invia</button>
 </form>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
