--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -45,6 +45,19 @@
   </div>
 </nav>
 <br>
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+      Column
+    </div>
+  </div>
+</div>
     <form>
   <div class="mb-3">
     <label for="exampleInputCognome" class="form-label">Io devo essere visibile per chi ha il cognome dalla A alla G</label>
