--- a/VerificaBootstrap1.html
+++ b/VerificaBootstrap1.html
@@ -50,7 +50,7 @@
     <div class="col">
     
     </div>
-    <div class="col">
+    <div class="col-6">
       <form>
   <div class="mb-3">
     <label for="exampleInputCognome" class="form-label">Io devo essere visibile per chi ha il cognome dalla A alla G</label>
