--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
    <body>
      
-    <img src="img/img.caccia.jpg" class="img-fluid w-50" alt="Header caccia al tesoro">
+    <img src="img/img.caccia.jpg" class="img-fluid" alt="Header caccia al tesoro">
      
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
