--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
   </div>
 </nav>
      
-    <div class="container text-center">
+    <div class="container">
   <div class="row">
     <div class="col">
     </div>
      <form>
   <div class="mb-3">
-    <label for="exampleInpuUsername1" class="form-label">Username</label>
-    <input type="username" class="form-control" id="exampleInputUsername1">
+    <label for="Username" class="form-label">Username</label>
+    <input type="text" class="form-control" id="Username">
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <label for="Password" class="form-label">Password</label>
+    <input type="Password" class="form-control" id="Password">
   </div>
-  <button type="login" class="btn btn-primary">Login</button>
+  <button type="submit" class="btn btn-primary">Login</button>
 </form>
 </div>
 
