--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </div>
   </div>
 </nav>
-     
+<br>
     <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-6">
     </div>
      <form>
   <div class="mb-3">
