--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <label for="Password" class="form-label">Password</label>
     <input type="Password" class="form-control" id="Password">
   </div>
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button type="submit" class="btn btn-primary" onclick="doLogin()">Login</button>
 </form>
 </div>
 
