--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </form>
 </div>
 
-<script src="script/esterno.js"></script>
+<script src="esterni/file.js"></script>
       
     <script src="https://www.animazionelestar.it/l/caccia-al-tesoro-online/" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </body>
