--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="nav-item">
         <li class="nav-item dropdown">
           
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+          <a class="nav-link dropdown-toggle" "nav-link disactive" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
             Game
           </a> 
           <ul class="dropdown-menu">
